* 2013-10-14 - thorben.betten@open-xchange.com

 - Fix for bug 29263: Fixed property constant from "com.openexchange. cookie.forceHTTPS" to "com.openexchange.forceHTTPS"
 - Fix for bug 29262: Read Jolokia configuration only if enabled via "com.openexchange.jolokia.start" property
 - Fix for bug 26979: Interrupt-aware CharSequence to stop excessive computations in Java regex plus size limitation for CSS selectors (not more than 2KB)

* 2013-10-11 - marc.arens@open-xchange.com

 - Fix for bug 29235: Move logger call above ServletResponse.getWriter which might fail and swallow error infos

* 2013-10-11 - marcus.klein@open-xchange.com

 - Partial fix for bug 26072: Detect changed context class loader in thread pool and restore the original one. Writing error into log file
   when context class loader is changed.

* 2013-10-11 - thorben.betten@open-xchange.com

 - Fix for bug 29232: Handle a meanwhile expunged message appropriately
 - Fix for bug 29233: Push read-write connection back into pool while signaling that it has been used for reading only
 - Fix for bug 29230: Handle possible "ParsingFeedException" when reading RSS feed's XML content
 - Fix for bug 29246: Check MailFolder for not null when fetching from cache
 - Fix for bug 29248: Recover from possibly mail-parsed multipart content
 - Fix for bug 29247: Clear IMAPAccess instance from IMAPStore's session properties on close

* 2013-10-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 29214: Fire filestorage events upon copy-operation within the same account
 - Fix for bug 29222: Really delete collected files during batch action execution 

* 2013-10-09 - marcus.klein@open-xchange.com

 - Fix for bug 29195: Added transitional package for open-xchange-l10n-sv-sv to ensure proper upgrade to open-xchange-l10n-sv-se.

* 2013-10-09 - dennis.sieben@open-xchange.com

 - Fix for bug 29200: Moved dry-run exit before the context deletion lines

* 2013-10-09 - thorben.betten@open-xchange.com
