@@ -137,6 +137,7 @@ public class AppointmentBugTestSuite extends TestSuite {
         tests.addTestSuite(Bug24502Test.class);
         tests.addTestSuite(Bug26842Test.class);
         tests.addTestSuite(Bug26350Test.class);
+        tests.addTestSuite(Bug29268Test.class);
 		return tests;
 	}
 }
